k8s/components/frontend/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: main
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /home/almond-cloud/shared
              name: shared
      volumes:
        - name: shared
          hostPath:
            type: Directory
            path: //tmp/shared
